[tool.poetry]
name = "PyStratum-Cli"
version = "2.0.2"
description = "PyStratum CLI: The frontend of PyStratum"
authors = ["Set Based IT Consultancy <info@setbased.nl>"]
keywords = ["PyStratum", "CLI"]
classifiers = ["Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Installation/Setup",
]

[tool.poetry.dependencies]
cleo = "^2.1.0"
pystratum-backend = "^2.1.0"
python = "^3.12.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.1"

[tool.poetry.scripts]
pystratum = "pystratum_cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
